tests/baselines/reference/classExtendsInterfaceThatExtendsClassWithPrivates1.errors.txt
==== tests/cases/compiler/classExtendsInterfaceThatExtendsClassWithPrivates1.ts (1 errors) ====
    class C {
        public foo(x: any) { return x; }
        private x = 1;
    }
    
    interface I extends C {
        other(x: any): any;
    }
    
    class D2 implements I {
          ~~
!!! error TS2421: Class 'D2' incorrectly implements interface 'I':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        public foo(x: any) { return x }
        private x = 3;
        other(x: any) { return x }
    } 